API_KEY and Auto refresh eurnext
api key - auto refresh euro
